# RAG_QCTCVN

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ZILLIZ_QUICKSTART.md  app.py  app_ui.py  conftest.py  docker-compose.yml  full_reindex_report.json  ingestion_report_20251209_093034.json  pyproject.toml  requirements.txt  server.py  start.bat
.agent/: README.md  command_monitor.py
.agent/workflows/: create-pr.md  discard-feature.md  new-feature.md  release-feature.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml  prompts.yaml
data/: gold_standard_qa.json  manifest.json  test_hierarchical.docx
data/metadata/: document_registry.json  topics_mapping.json
data/test/: gold_standard_qa.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONSTITUTION.md  DATA_STRATEGY.md  DEPLOYMENT.md  GROQ_FALLBACK_SETUP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RETRIEVAL_TESTS.md  SPECIFICATION.md  ZILLIZ_CLOUD_SETUP.md
entrypoint/: __init__.py  cli.py  serve.py
examples/: demo_multi_agent.py  evaluation_example.py  sample_retrieval_report.json  sample_retrieval_tests.py  simple_usage.py
scripts/: analyze_chunk_size.py  analyze_milvus_chunks.py  check_fix_status.py  check_milvus_count.py  check_v2_status.py  correct_documents.py  document_analyzer.py  final_check.py  full_reindex.py  inspect_content.py  inspect_names.py  prepare_reindex.py  reindex_batch.py  rename_data_files.py  test_chunking_fix.py  test_metadata_extraction.py  test_parsers.py  test_pipeline.py  test_pipeline_improvements.py  test_rag_e2e.py  test_retrieval_quality.py  verify_chunk_coverage.py
src/ccba_rag/: __init__.py  client.py
src/ccba_rag/core/: __init__.py  base.py  constants.py  models.py  prompts.py  rag_system.py  (+1 more)
tests/: reproduce_generator_error.py  test_config.py  test_core.py  test_document_processor.py  test_embedder.py  test_generation.py  test_generators.py  test_hierarchical_chunking.py  test_refactored_pipeline.py
(+34 files in other folders)
